Fixed a bug where the discussion component sometimes shows a vertical scrollbar
- Added "component--[type]" class to component DIVs

--- a/src/main/webapp/wise5/vle/themes/default/style/modules/_component--discussion.scss
+++ b/src/main/webapp/wise5/vle/themes/default/style/modules/_component--discussion.scss
@@ -1,6 +1,10 @@
 // Variables
 
 // Base
+.component--Discussion {
+    overflow: hidden;
+}
+
 .discussion-content {
   background-color: color('gray-light');
   margin: 0 0 -16px;
